--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
