--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
