--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "vite-plugin-svgr": "^2.4.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
