--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/styles": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5"
   },
